# vigilia_med_mvp

./: .gitignore  README.MD
api/: README.md  pyproject.toml  pytest.toml  ruff.toml  tox.toml  ty.toml
api/src/app/: __main__.py  main.py
api/src/app/utils/: __init__.py  log_around.py  logging_config.py
api/tests/: test_main.py
api/tests/utils/: test_log_around.py  test_logging_config.py
